Fix Header Gap

--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -131,7 +131,7 @@
 
 .banner-about {
   position: relative;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 .banner-about .absoluteSection {
   position: absolute;
