--- a/assets/css/engineeringCourses.css
+++ b/assets/css/engineeringCourses.css
@@ -1,6 +1,6 @@
 .banner-eng {
   position: relative;
-  margin-top: 20px;
+  /* margin-top: 20px; */
 }
 .banner-eng .absoluteSection {
   position: absolute;
